Updated social media

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                         <!-- Make a class type, Going to be used through webpage multiple times-->
                         <ul class="social-media">
                             <!-- Create a inner ul list to have social media info, target attribute opens a new tab-->
-                            <li><a href="https://www.instagram.com/zeus.0101/" target="_blank"><img src="./img/instagram.png" width="30px" height="30px"></a></li>
-                            <li><a href="https://twitter.com/dann_menes996" target="_blank"><img src="./img/twitter.gif" width="30px" height="30px"></a></li>
-                            <li><a href="https://www.facebook.com/profile.php?id=100007469088922" target="_blank"><img src="./img/facebook.png" width="35px" height="35px"></a></li>
+                            <li><a href="" target="_blank"><img src="./img/instagram.png" width="30px" height="30px"></a></li>
+                            <li><a href="" target="_blank"><img src="./img/twitter.gif" width="30px" height="30px"></a></li>
+                            <li><a href="" target="_blank"><img src="./img/facebook.png" width="35px" height="35px"></a></li>
                         </ul>
                   </div>
                   <div id="name">
@@ -174,9 +174,9 @@
               <!-- Make a class type, Going to be used through webpage multiple times-->
               <ul class="social-media">
                   <!-- Create a inner ul list to have social media info, target attribute opens a new tab-->
-                  <li><a href="https://www.instagram.com/zeus.0101/" target="_blank"><img src="./img/instagram.png" width="30px" height="30px"></a></li>
-                  <li><a href="https://twitter.com/dann_menes996" target="_blank"><img src="./img/twitter.gif" width="30px" height="30px"></a></li>
-                  <li><a href="https://www.facebook.com/profile.php?id=100007469088922" target="_blank"><img src="./img/facebook.png" width="35px" height="35px"></a></li>
+                  <li><a href="" target="_blank"><img src="./img/instagram.png" width="30px" height="30px"></a></li>
+                  <li><a href="" target="_blank"><img src="./img/twitter.gif" width="30px" height="30px"></a></li>
+                  <li><a href="" target="_blank"><img src="./img/facebook.png" width="35px" height="35px"></a></li>
               </ul>
           </div>
           <footer id="copyright">
